--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <link rel="stylesheet" type="text/css" href="index.css">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -21,7 +22,10 @@
     -->
     <title>React App</title>
   </head>
-  <body>
+  <body class="main" style="background-image: url('../src/images/bg2.png') ; 
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;">
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
