--- a/public/index.html
+++ b/public/index.html
@@ -22,10 +22,8 @@
     -->
     <title>React App</title>
   </head>
-  <body class="main" style="background-image: url('../src/images/bg2.png') ; 
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-attachment: fixed;">
+  <body class="main">
+  
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
